# ViewObj

./: pyproject.toml
src/: ViewObj.py
tests/: test_ViewImmutable.py  test_ViewMutable.py
